--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "google-spreadsheet": "^3.1.15",
     "knex": "^0.95.4",
     "nodemon": "^2.0.7",
     "pg": "^8.5.1",
